fix(styles): Truncate card titles to 3 lines if it has a description (#3467)

--- a/system-addon/content-src/components/Card/_Card.scss
+++ b/system-addon/content-src/components/Card/_Card.scss
@@ -109,6 +109,10 @@
     &.no-image.no-host-name.no-context {
       max-height: 12*$card-text-line-height + $card-title-margin;
     }
+    &:not(.no-description) .card-title {
+      max-height: 3*$card-text-line-height;
+      overflow: hidden;
+    }
   }
 
   .card-host-name {
